--- a/package.json
+++ b/package.json
@@ -12,6 +12,8 @@
   "dependencies": {
     "axios": "^0.24.0",
     "dateformat": "^5.0.2",
-    "request": "^2.88.2"
+    "nodemon": "^2.0.14",
+    "request": "^2.88.2",
+    "tesseract.js": "^2.1.5"
   }
 }
