--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "Yurei is a fast and efficient scraper for LightShot/prnt.sc. Its purpose is to archive and re-publish insecurely saved user content such as screenshots on prnt.sc",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "fmt": "prettier -w ."
   },
   "keywords": [],
   "author": "",
@@ -13,5 +14,8 @@
     "axios": "^0.24.0",
     "dateformat": "^5.0.2",
     "request": "^2.88.2"
+  },
+  "devDependencies": {
+    "prettier": "^2.4.1"
   }
 }
